--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "stripe": "^13.3.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "supabase": "^1.88.0"
